projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
[data-carousel-extra]:not( .jp-carousel-wrap ) {
	cursor: pointer;
}

.jp-carousel-wrap * {
	line-height: inherit;
}

.swiper-container {
	height: auto;
	width: 100vw;
}

.jp-carousel-overlay .swiper-zoom-container {
	background-size: 200%;
	background-repeat: no-repeat;
	background-position: center;
}

.jp-carousel-overlay .swiper-button-prev:after,
.jp-carousel-overlay .swiper-button-next:after {
	color: #cccccc;
	opacity: 0.5;
	font-size: 3rem;
	transition: 0.5s opacity ease-out;
}

.jp-carousel-overlay .swiper-button-prev:hover:after,
.jp-carousel-overlay .swiper-button-next:hover:after {
	opacity: 1;
}

.jp-carousel-overlay {
	font-family: 'Helvetica Neue', sans-serif !important;
	z-index: 10;
	overflow-x: hidden;
	overflow-y: auto;
	direction: ltr;
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: #000;
}

.swiper-container .swiper-button-prev {
	left: 40px;
}
.swiper-container .swiper-button-next {
	right: 40px;
}

.jp-carousel-container {
	display: grid;
	grid-template-rows: 1fr 50px; /* 1. main carousel, 2. info area as footer */
	height: 100%;
}

.jp-carousel-msg {
	font-family: 'Open Sans', sans-serif;
	font-style: normal;
	display: inline-block;
	line-height: 19px;
	padding: 11px 15px;
	font-size: 14px;
	text-align: center;
	margin: 25px 20px 0 2px;
	background-color: #fff;
	border-left: 4px solid #ffba00;
	-webkit-box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
	box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
}

.jp-carousel-info {
	display: flex;
	flex-direction: column;
	text-align: left !important;
	-webkit-font-smoothing: subpixel-antialiased !important;
	z-index: 100;
	background-color: #000;
}

.jp-carousel-info-footer {
	background-color: #000;
	height: 60px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100vw;
}

.jp-carousel-info-extra {
	display: none;
	background: #000;
	padding: 15px 35px 35px 35px;
	width: 100vw;
	border-top: 1px solid #222;
}

.jp-carousel-title-and-caption {
	margin-bottom: 15px;
}

.jp-carousel-info-extra.jp-carousel-show {
	display: block;
}

.jp-carousel-info ::selection {
	background: #68c9e8; /* Safari */
	color: #fff;
}

.jp-carousel-info ::-moz-selection {
	background: #68c9e8; /* Firefox */
	color: #fff;
}

.jp-carousel-photo-info {
	left: 0 !important;
	width: 100% !important;
}

.jp-carousel-comments-wrapper {
	padding: 0;
	width: 100% !important;
	display: none;
}

.jp-carousel-comments-wrapper.jp-carousel-show {
	display: block;
}

.jp-carousel-comments-wrapper > .jp-carousel-photo-info {
	display: none;
}

.jp-carousel-transitions .jp-carousel-photo-info {
	-webkit-transition: 400ms ease-out;
	-moz-transition: 400ms ease-out;
	-o-transition: 400ms ease-out;
	transition: 400ms ease-out;
}

.jp-carousel-transitions .jp-carousel-next-button span,
.jp-carousel-transitions .jp-carousel-previous-button span {
	-webkit-transition: 500ms opacity ease-out;
	-moz-transition: 500ms opacity ease-out;
	-o-transition: 500ms opacity ease-out;
	transition: 500ms opacity ease-out;
}

.jp-carousel-buttons {
	margin: -18px -20px 15px;
	padding: 8px 10px;
	border-bottom: 1px solid #222;
	background: #222;
	text-align: center;
}

div.jp-carousel-buttons a {
	border: none !important;
	color: #999;
	font: normal 11px/1.2em 'Helvetica Neue', sans-serif !important;
	letter-spacing: 0 !important;
	padding: 5px 2px 5px 0;
	text-decoration: none !important;
	text-shadow: none !important;
	vertical-align: middle;
	-webkit-font-smoothing: subpixel-antialiased;
}

div.jp-carousel-buttons a:hover {
	color: #68c9e8;
	border: none !important;
}

.jp-carousel-transitions div.jp-carousel-buttons a:hover {
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-o-transition: none !important;
	transition: none !important;
}

.jp-carousel-slide,
.jp-carousel-slide img,
.jp-carousel-next-button,
.jp-carousel-previous-button {
	-webkit-transform: translate3d( 0, 0, 0 );
	-moz-transform: translate3d( 0, 0, 0 );
	-o-transform: translate3d( 0, 0, 0 );
	-ms-transform: translate3d( 0, 0, 0 );
	transform: translate3d( 0, 0, 0 );
}

.jp-carousel-close-hint {
	cursor: default;
	letter-spacing: 0 !important;
	position: fixed;
	top: 20px;
	right: 25px;
	text-align: right;
	width: 45px;
	height: 45px;
	z-index: 15;
	color: #fff;
}

body.admin-bar .jp-carousel-close-hint {
	top: 50px;
}

.jp-carousel-transitions .jp-carousel-close-hint {
	-webkit-transition: color 200ms linear;
	-moz-transition: color 200ms linear;
	-o-transition: color 200ms linear;
	transition: color 200ms linear;
}

.jp-carousel-close-hint span {
	cursor: pointer;
	background-color: transparent;
	display: inline-block;
	font: 400 36px/1 'Helvetica Neue', sans-serif !important;
	line-height: 22px;
	margin: 0;
	text-align: center;
	vertical-align: middle;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	font-size: 36px !important;
	height: 44px;
	width: 44px;
}

.jp-carousel-transitions .jp-carousel-close-hint span {
	-webkit-transition: border-color 200ms linear;
	-moz-transition: border-color 200ms linear;
	-o-transition: border-color 200ms linear;
	transition: border-color 200ms linear;
}

.jp-carousel-close-hint:hover {
	cursor: default;
	color: #fff;
}

.jp-carousel-close-hint:hover span {
	border-color: #fff;
}

div.jp-carousel-buttons a.jp-carousel-commentlink,
a.jp-carousel-image-download {
	background: url( ./images/carousel-sprite.png?5 ) no-repeat;
	background-size: 16px 200px;
}

div.jp-carousel-buttons a.jp-carousel-commentlink {
	margin: 0 14px 0 0 !important;
	background-position: 0px -156px;
	padding-left: 19px !important;
}

@media only screen and ( -webkit-min-device-pixel-ratio: 1.5 ),
	only screen and ( -o-min-device-pixel-ratio: 3/2 ),
	only screen and ( min--moz-device-pixel-ratio: 1.5 ),
	only screen and ( min-device-pixel-ratio: 1.5 ) {
	div.jp-carousel-buttons a.jp-carousel-commentlink,
	a.jp-carousel-image-download {
		background-image: url( ./images/carousel-sprite-2x.png?5 );
	}
}
/* ... */

